removed unnecessary API calls

--- a/src/app/modules/authentication/authentication.component.html
+++ b/src/app/modules/authentication/authentication.component.html
@@ -1,8 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center center" class="mt-4">
+<div fxLayout="column"  class="mt-2 container" fxLayoutGap="1rem">
     <img src="assets/images/login-logo.png" class="logo-image"/>
-    <div fxLayout="column">
-        <div fxFlex="100">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+    <router-outlet></router-outlet>
 </div>
