--- a/src/app/modules/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/authentication/components/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="forgot-password-wrapper">
-    <div fxLayout="column" fxFlex fxLayoutAlign="center center">
+    <div fxLayout="column">
         <div class="login-title">
             <mat-label>Forgot Credentials?</mat-label>
         </div>
