--- a/src/app/modules/authentication/components/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/authentication/components/forgot-password/forgot-password.component.scss
@@ -2,10 +2,14 @@
 .forgot-password-wrapper {
     background: $sweety-white;
     padding: 15px;
+    margin-bottom: 3rem;
+    border-radius: 0.5rem;
     .login-title {
         mat-label {
             font-size: 1rem;
         }
+        align-self: center;
+        margin-bottom: 1rem;
     }
     .login-form {
         .md-block {
