--- a/src/app/modules/authentication/components/login/login.component.html
+++ b/src/app/modules/authentication/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-wrapper">
-    <div fxLayout="column" fxFlex fxLayoutAlign="center center">
+    <div fxLayout="column" >
         <div class="login-title">
             <mat-label>Login</mat-label>
         </div>
