--- a/src/app/modules/home/components/online-food/online-food-image-selection/online-food-image-selection.component.html
+++ b/src/app/modules/home/components/online-food/online-food-image-selection/online-food-image-selection.component.html
@@ -1,1 +1,138 @@
-<app-online-food-images [isSelection]="true" (_onSelect)="getImage($event)"></app-online-food-images>
+<div fxLayout="column" fxFlex="100">
+    <div fxLayout="row" fxLayoutAlign="space-between" class="heading-title">
+        <div class="title">
+            Add Images
+        </div>
+        <button mat-icon-button  (click)="isAddImage=!isAddImage">
+            <i class="las la-plus" *ngIf="!isAddImage"></i>
+            <i class="las la-times" *ngIf="isAddImage"></i>
+        </button>
+    </div>  <div fxLayout="column" fxLayoutGap="1rem" *ngIf="isAddImage">             
+        <app-file-upload
+            #fileUpload
+            [label]="'Image Upload'"
+            [maxSize]="5"
+            [isMultiple]="false"
+            [accept]="'.png,.jpeg,.jpg,.PNG,.JPG,.JPEG,.webp,.gif,.GIF'"
+            (_onUpload)="onFileSelected($event, fileUpload)"
+        >
+        </app-file-upload>
+        <div  fxFlex="60" *ngIf="false">
+            <div class="file-details">
+                <div *ngIf="selectedFiles.length !== 0">Selected Images</div>
+                <ng-container>
+                    <div class="no-file" *ngIf="selectedFiles.length === 0">No File Selected</div>
+                </ng-container>
+                <ng-container *ngFor="let file of selectedFiles; let i = index">
+                    <div class="items">
+                        <div class="file-name">
+                            <i class="las la-check-circle"></i>
+                            <div class="label">{{ file.name }}</div>
+                        </div>
+                        <div>
+                            <button
+                                mat-icon-button
+                                aria-label="clear"
+                                color="primary"
+                                (click)="deleteSelectedFile(i)"
+                            >
+                                <i class="las la-trash"></i>
+                            </button>
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+        </div>                    
+        <button
+        *ngIf="selectedFiles.length>0"
+            class="mat-raised-button mat-primary"
+            type="submit"
+            mat-button
+            (click)="uploadFile()">Submit
+        </button>
+    </div>  
+    <div fxLayout="column" fxFlex="100" fxLayoutGap="2rem">
+        <app-sgs-card *ngFor="let image of imagesList;let i=index;">             
+            <div fxLayout="column" fxLayoutGap="1rem">
+                <img (click)="isActive(image)" 
+                [src]="image?.url || 'assets/images/image-preview'" 
+                [class.border-active]="image.active" 
+                class="image image-preview" 
+                /> 
+                <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
+                    <div class="title">{{image.title}}</div>
+                </div>
+            </div>
+        </app-sgs-card> 
+    </div>
+    <!-- <app-master-container>
+        <ng-container header>Images</ng-container>
+        <ng-container icons>
+            <button mat-icon-button (click)="downloadExcel()">
+                <i class="las la-file-excel"></i>
+            </button>
+            <button mat-icon-button  (click)="isAddImage=!isAddImage">
+                <i class="las la-plus" *ngIf="!isAddImage"></i>
+                <i class="las la-times" *ngIf="isAddImage"></i>
+            </button>
+        </ng-container>
+        <ng-container body>          
+            <div fxLayout="column" fxLayoutGap="2rem">
+                <div fxLayout="column" fxLayoutGap="1rem" *ngIf="isAddImage">             
+                    <app-file-upload
+                        #fileUpload
+                        [label]="'Image Upload'"
+                        [maxSize]="5"
+                        [isMultiple]="false"
+                        [accept]="'.png,.jpeg,.jpg,.PNG,.JPG,.JPEG,.webp,.gif,.GIF'"
+                        (_onUpload)="onFileSelected($event, fileUpload)"
+                    >
+                    </app-file-upload>
+                    <div  fxFlex="60" *ngIf="false">
+                        <div class="file-details">
+                            <div *ngIf="selectedFiles.length !== 0">Selected Images</div>
+                            <ng-container>
+                                <div class="no-file" *ngIf="selectedFiles.length === 0">No File Selected</div>
+                            </ng-container>
+                            <ng-container *ngFor="let file of selectedFiles; let i = index">
+                                <div class="items">
+                                    <div class="file-name">
+                                        <i class="las la-check-circle"></i>
+                                        <div class="label">{{ file.name }}</div>
+                                    </div>
+                                    <div>
+                                        <button
+                                            mat-icon-button
+                                            aria-label="clear"
+                                            color="primary"
+                                            (click)="deleteSelectedFile(i)"
+                                        >
+                                            <i class="las la-trash"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </ng-container>
+                        </div>
+                    </div>                    
+                    <button
+                    *ngIf="selectedFiles.length>0"
+                        class="mat-raised-button mat-primary"
+                        type="submit"
+                        mat-button
+                        (click)="uploadFile()">Submit
+                    </button>
+                </div>            
+                <div fxLayout="row" fxLayoutGap="1rem" class="wrap">
+                    <div fxFlex="50" *ngFor="let image of imagesList;let i=index;" class="thumbnail">
+                        <img (click)="isActive(image)" 
+                        [src]="image?.url || 'assets/images/image-preview'" 
+                        [class]="image.active?'border-active':'border-inactive'" 
+                        class="image mb-1" 
+                        />                        
+                        <i (click)="deleteRequest(image,i)" class="las la-times delete-file" *ngIf="image.active"></i>
+                    </div>
+                </div>
+            </div>
+        </ng-container>
+    </app-master-container>     -->
+</div>
