--- a/src/app/modules/home/components/online-food/online-food-users/online-food-users.component.html
+++ b/src/app/modules/home/components/online-food/online-food-users/online-food-users.component.html
@@ -5,33 +5,35 @@
             Select Status
         </div>
     </div>
-    <div fxLayout="column" fxFlex="100" >     
-        <div fxLayout="row" >            
-            <div class="chips" [class]="this.selectedStatus=== category?'active':'inactive'" 
-            *ngFor="let category of statuses;let i=index;"
-            (click)="updateStatus($event,category)">
-            <i class="las la-check" *ngIf="this.selectedStatus=== category"></i><span>{{
-                category
-            }}</span>
+    <div class="column-container">
+        <div>
+            <div class="row-container-overflow">
+                <div class="chips" [class]="this.selectedStatus=== category?'active':'inactive'" 
+                *ngFor="let category of statuses;let i=index;"
+                (click)="updateStatus($event,category)">
+                <i class="las la-check" *ngIf="this.selectedStatus=== category"></i><span>{{
+                    category
+                }}</span>
+                </div>
             </div>
-        </div>  
-    </div> 
-    <app-master-container *ngFor="let item of sortedData;let i=index;">
-        <ng-container header>User ID: {{item.userId}}</ng-container>
-        <ng-container icons>
-            <button mat-icon-button>
-                <i class="las la-info-circle"></i>
-            </button>
-        </ng-container>
-        <ng-container body>               
-            <div fxLayout="column">
+        </div>
+    </div>
+    <div fxLayout="column" fxLayoutGap="2rem" class="mb-2"> 
+        <app-sgs-card *ngFor="let item of sortedData;let i=index;">
+            <div fxLayout="column" class="p-1">
+                <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons ">
+                    <span class="card-title">User ID: {{item.userId}}</span>
+                    <button mat-icon-button >
+                        <i class="las la-info-circle"></i>
+                    </button>
+                </div> 
                 <app-label-value
-                [label]="'Ordered By'"
+                [label]="'First Name'"
                 [value]="item.firstName"
                 >
                 </app-label-value>
                 <app-label-value
-                [label]="'Ordered By'"
+                [label]="'Last Name'"
                 [value]="item.lastName"
                 >
                 </app-label-value>
@@ -47,12 +49,12 @@
                 </app-label-value>
                 <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
                     <button mat-icon-button>
-                        <i class="las la-history"></i><span>{{item.created_at | date:'medium'}}</span>
+                        Joining Date: <i class="las la-history"></i><span>{{item.created_at | date:'medium'}}</span>
                     </button>
                 </div>
             </div>
-        </ng-container>
-    </app-master-container> 
+        </app-sgs-card> 
+    </div>
     <!-- <app-master-container>
         <ng-container header>Users</ng-container>
         <ng-container icons>
