--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -53,7 +53,7 @@
                     <button (click)="drawer.toggle()" mat-icon-button>
                         <i class="las la-bars"></i>
                     </button>
-                    <div class="las">{{user.pageTitle}}</div>
+                    <div class="card-title">{{user.pageTitle}}</div>
                     <span class="top-menu-spacer"></span>
                     <button mat-icon-button (click)="action('LOGOUT')" >                        
                         <i class="las la-arrow-circle-right"></i>
