--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -1,7 +1,12 @@
 @import 'variables';
-.mt-4{
-    margin-top: 4rem;
+.mt-2{
+    margin-top: 2rem;
 }
 .logo-image{
-    width: 8rem;
+    width: 8rem;    
+    align-self: center;
+}
+.container{
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
