--- a/src/app/modules/home/components/online-food/online-food-categories/online-food-categories.component.html
+++ b/src/app/modules/home/components/online-food/online-food-categories/online-food-categories.component.html
@@ -1,4 +1,3 @@
-<app-outlet-container>
     <div fxLayout="column" fxFlex="100" >
         <div fxLayout="row" fxLayoutAlign="space-between" class="heading-title">
             <div class="title">
@@ -14,12 +13,14 @@
                     (_lazyLoad)="lazyLoad($event)"
                     (_clickCell)="onClickCell($event)"
                 ></app-sgs-table> -->
- 
-        <app-master-container *ngFor="let category of sortedData;let i=index;">
-            <ng-container header>{{category.category_name}}</ng-container>
-            <ng-container body>               
-                <div fxLayout="column" fxLayoutGap="1rem">
-                    <img class="image-preview" [src]="category.url" /> 
+                         
+        <div fxLayout="column" fxLayoutGap="2rem" class="mb-2">  
+            <app-sgs-card *ngFor="let category of sortedData;let i=index;"> 
+                <img class="image-preview" [src]="category.url" />          
+                <div fxLayout="column" fxLayoutGap="1rem" class="p-1">                     
+                    <div fxLayout="row" fxLayoutAlign="space-between">
+                        <span class="card-title">{{category.category_name}}</span>
+                    </div> 
                     <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
                         <button mat-icon-button (click)="deleteData(category)">
                             <i class="las la-trash"></i>
@@ -29,7 +30,6 @@
                         </button>
                     </div>
                 </div>
-            </ng-container>
-        </app-master-container>   
+            </app-sgs-card>  
+        </div>
     </div>
-</app-outlet-container>
