--- a/src/app/modules/home/components/online-food/online-food-images/online-food-images.component.scss
+++ b/src/app/modules/home/components/online-food/online-food-images/online-food-images.component.scss
@@ -1,19 +1,14 @@
 @import 'colors';
 .image{
-    width: 8rem;
-    height: 8rem;
-    object-fit: cover;
+    width: 100%;
+    height: 16rem;
+    object-fit: scale-down;
     cursor: pointer;
 }
 .wrap{
     flex-wrap: wrap;
 }
-.mb-1{
-    margin-bottom: 1rem;
-}
-.border-inactive{
-    border: 0.2rem solid #dde7dc;
-}
+
 .border-active{
     border: 0.2rem solid rgb(10, 155, 10);
     cursor: default;
@@ -59,7 +54,4 @@
 .delete-file{
     position: absolute;
     cursor: pointer;
-}
-.thumbnail{
-    position: relative;
 }
