--- a/src/app/modules/home/components/online-food/online-food-sub-categories/online-food-sub-categories.component.html
+++ b/src/app/modules/home/components/online-food/online-food-sub-categories/online-food-sub-categories.component.html
@@ -1,26 +1,36 @@
-<app-outlet-container>
-    <div fxLayout="column" fxFlex="100" >
+    <div fxLayout="column" fxFlex="100">
         <div fxLayout="row" fxLayoutAlign="space-between" class="heading-title">
             <div class="title">
                 Add Sub Categories
             </div>
-            <button mat-icon-button (click)="addSubCategory()">
+            <button mat-icon-button (click)="addSubCategory()" *ngIf="this.selectedCategory?.id>0">
                 <i class="las la-plus"></i>
             </button>
-        </div>
-        <div fxLayout="row" >            
-            <div class="chips" [class]="this.selectedCategory?.id=== category.id?'active':'inactive'" *ngFor="let category of categories;let i=index;"
-            (click)="getSubCategoriesByCategory($event,category)">
-            <i class="las la-check" *ngIf="this.selectedCategory?.id=== category.id"></i><span>{{
-                category.category_name
-            }}</span>
+        </div>              
+        <div fxLayout="row" *ngIf="categories.length>0" fxLayoutAlign="space-between" class="heading-title">
+            <div class="sub-title">
+                select Category
+            </div>
+        </div> 
+        <div class="column-container">
+            <div>
+                <div class="row-container-overflow">
+                    <div class="chips" [class]="this.selectedCategory?.id=== category.id?'active':'inactive'" *ngFor="let category of categories;let i=index;"
+                    (click)="getSubCategoriesByCategory($event,category)">
+                    <i class="las la-check" *ngIf="this.selectedCategory?.id=== category.id"></i><span>{{
+                        category.category_name
+                    }}</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <app-master-container *ngFor="let category of sortedData;let i=index;">
-            <ng-container header>{{category.sub_category_name}}</ng-container>
-            <ng-container body>               
-                <div fxLayout="column" fxLayoutGap="1rem">
-                    <img class="image-preview" [src]="category.url" /> 
+        <div fxLayout="column" fxLayoutGap="2rem"  class="mb-2">
+            <app-sgs-card *ngFor="let category of sortedData;let i=index;"> 
+                <img class="image-preview" [src]="category.url" />            
+                <div fxLayout="column" fxLayoutGap="1rem" class="p-1">                
+                    <div fxLayout="row" fxLayoutAlign="space-between">
+                        <span class="card-title">{{category.sub_category_name}}</span>
+                    </div>
                     <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
                         <button mat-icon-button (click)="deleteData(category)">
                             <i class="las la-trash"></i>
@@ -30,8 +40,8 @@
                         </button>
                     </div>
                 </div>
-            </ng-container>
-        </app-master-container> 
+            </app-sgs-card> 
+        </div>
     <!-- <app-master-container>
         <ng-container header>Sub Categories</ng-container>
         <ng-container icons>
@@ -62,4 +72,3 @@
         </ng-container>
     </app-master-container>  -->
     </div>   
-</app-outlet-container>
