--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -30,7 +30,7 @@
 }
 .middle-container-gap{
     padding-top: 3.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
     background: #f1f2f4;
     height: 100vh;
 }  
@@ -66,7 +66,7 @@
             z-index: 2; 
             top:0; 
             .las{
-                font-size: 1.2rem; 
+                font-size: 1.6rem; 
                 color:#fff;
             }
         }
@@ -95,6 +95,11 @@
             margin-bottom: 12px;
             font-size: 0.8rem;
         }
+    }
+    .card-title{
+        font-size: 1.1rem;
+        color: #fff;
+        font-weight: bold;
     }
 }
 // .round-div{
