--- a/src/app/sgs-components/master-container/master-container.component.scss
+++ b/src/app/sgs-components/master-container/master-container.component.scss
@@ -48,7 +48,7 @@
         border-bottom-left-radius: 0;
     }
     .body {
-        // overflow-y: auto;
+        overflow-y: auto;
         padding: 0 1rem 1rem;
         display: flex;
         flex-wrap: wrap;
