--- a/src/app/sgs-components/sgs-card/sgs-card.component.html
+++ b/src/app/sgs-components/sgs-card/sgs-card.component.html
@@ -1,3 +1,3 @@
-<div class="card" matRipple (click)="_click.emit()" [ngClass]="{ 'card-active': this.isActive }" [ngStyle]="styles">
+<div class="card"  [ngClass]="{ 'card-active': this.isActive }" [ngStyle]="styles">
     <ng-content> </ng-content>
 </div>
