--- a/src/app/sgs-components/sgs-card/sgs-card.component.scss
+++ b/src/app/sgs-components/sgs-card/sgs-card.component.scss
@@ -3,17 +3,19 @@
 .card {
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
+    // padding: 0.5rem;
     border-radius: 0.5rem;
     margin: 0.25rem auto;
-    cursor: pointer;
+    // cursor: pointer;
     background-color: #fff;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
-.card-active {
-    background: $sweety-background-grey;
-}
+// .card-active {
+//     background: $sweety-background-grey;
+// }
 
-.card:hover {
-    background: $sweety-background-grey;
-}
+// .card:hover {
+//     background: $sweety-background-grey;
+// }
