admin mobile app completed

--- a/src/app/modules/home/components/online-food/online-food-users/online-food-users.component.html
+++ b/src/app/modules/home/components/online-food/online-food-users/online-food-users.component.html
@@ -23,9 +23,9 @@
             <div fxLayout="column" class="p-1">
                 <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons ">
                     <span class="card-title">User ID: {{item.userId}}</span>
-                    <button mat-icon-button >
+                    <!-- <button mat-icon-button >
                         <i class="las la-info-circle"></i>
-                    </button>
+                    </button> -->
                 </div> 
                 <app-label-value
                 [label]="'First Name'"
