--- a/src/app/modules/home/components/online-food/online-food-orders/online-food-orders.component.html
+++ b/src/app/modules/home/components/online-food/online-food-orders/online-food-orders.component.html
@@ -20,50 +20,88 @@
             </div>
         </div>
     
-        <div fxLayout="column" fxLayoutGap="2rem" class="mb-2"> 
+        <div fxLayout="column" fxLayoutGap="2rem" class="mb-2 orders"> 
             <app-sgs-card *ngFor="let item of sortedData;let i=index;">             
-                <div fxLayout="column" class="p-1">
-                    <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons ">
-                        <span class="card-title">Order ID: {{item.txnNo}}</span>
-                        <button mat-icon-button >
-                            <i class="las la-info-circle"></i>
-                        </button>
-                    </div> 
-                    <app-label-value
-                    [label]="'Ordered By'"
-                    [value]="item.userName"
-                    >
-                    </app-label-value>
-                    <app-label-value
-                    [label]="'Email'"
-                    [value]="item.email"
-                    >
-                    </app-label-value>
-                    <app-label-value
-                    [label]="'Mobile'"
-                    [value]="item.mobilePhone"
-                    >
-                    </app-label-value>
-                    <app-label-value
-                    [label]="'Total Items'"
-                    [value]="item.total_products"
-                    >
-                    </app-label-value>
-                    <app-label-value
-                    [label]="'Total Qantity'"
-                    [value]="item.quantity"
-                    >
-                    </app-label-value>
-                    <app-label-value
-                    [label]="'Total Amount Paid'"
-                    [value]="item.amount_paid"
-                    >
-                    </app-label-value>
-                    
+                <div fxLayout="column" class="p-1" fxLayoutGap="0.3rem">
+                    <div>
+                        <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons ">
+                            <span class="card-title">Order ID: {{item.txnNo}}</span>
+                        </div> 
+                        <app-label-value
+                        [label]="'Ordered By'"
+                        [value]="item.userName"
+                        >
+                        </app-label-value>
+                        <app-label-value
+                        [label]="'Email'"
+                        [value]="item.email"
+                        >
+                        </app-label-value>
+                        <app-label-value
+                        [label]="'Mobile'"
+                        [value]="item.mobilePhone"
+                        >
+                        </app-label-value>
+                        <div fxLayout="row" fxLayoutAlign="space-between">
+                            <app-label-value
+                            [label]="'Total Items'"
+                            [value]="item.total_products"
+                            >
+                            </app-label-value>
+                            <app-label-value
+                            [label]="'Total Qantity'"
+                            [value]="item.quantity"
+                            >
+                            </app-label-value>
+                            <app-label-value
+                            [label]="'Total Amount Paid'"
+                            [value]="item.amount_paid"
+                            >
+                            </app-label-value>
+                        </div>
+                    </div>
+                    <div class="cart-item" fxLayout="row" fxLayoutGap="0.5rem" fxLayoutAlign="space-between" *ngFor="let cart of item.product_details">
+                        <div><img [src]="cart.path" /></div>
+                        <div class="title">{{cart.name}}</div>
+                        <div> {{cart.quantity}} </div>
+                        <div>X</div>
+                        <div>Rs.{{cart.price}}</div>
+                        <div> Rs.{{cart.quantity*cart.price}}</div>
+                    </div>                    
                     <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
                         <button mat-icon-button>
-                           Order Date: <i class="las la-history"></i><span>{{item.created_at | date:'medium'}}</span>
+                          <i class="las la-history"></i><span>{{item.created_at | date:'medium'}}</span>
                         </button>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="space-between" class="total-amount">
+                        <div>Total Amount:</div>
+                        <div>Rs.{{item.amount_paid}}</div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="end" class="cancel">
+                        <button
+                        *ngIf="item.status==='pending'"
+                            class="mat-raised-button mat-warn"
+                            type="button" 
+                            (click)="updateOrderStatus(item,'sent for delivery')"
+                        >
+                            Start Delivery
+                        </button>
+                         <button
+                            *ngIf="item.status==='sent for delivery'"
+                            class="mat-flat-button mat-primary green"
+                            type="button"
+                            (click)="updateOrderStatus(item,'completed')"
+                        >
+                            Mark as completed
+                        </button>
+                       <!-- <button
+                            *ngIf="item.status==='completed'"
+                            class="mat-flat-button mat-primary"
+                            type="button"
+                            (click)="orderAgain(item)"
+                        >
+                            Repeat order
+                        </button> -->
                     </div>
                 </div>
             </app-sgs-card> 
