--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -33,6 +33,7 @@
     padding-bottom: 2rem;
     background: #f1f2f4;
     height: 100vh;
+    overflow-y: auto;
 }  
 .example-sidenav {
    /// position: fixed;
