--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ $sweety1-theme: mat.define-light-theme(
 html,
 body {
     height: 100%;
-    background: #c5c5c5;
+    background: #f1f2f4;
 }
 
 .upperCase{
