--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -1,26 +1,25 @@
 @import 'variables';
 .authentication {
-    position: absolute;
-    top: $sweety-header-height;
-    bottom: $sweety-footer-height;
-    overflow-y: auto;
     background: $sweety-divider-color;
-    z-index: 1;
-    width: 100%;
+     width: 100%;
+     height: 100vh;
     background-image: url('../../../assets/images/login_bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
     .auth-container {
-        background: $sweety-divider-color;
+        background: #fff;
         border-radius: 6px;
-        // min-height: 380px;
-        margin: auto;
-        height: auto;
-        width: 50%;
+        margin: 2rem;
+        width: 40%;
+        top: 8rem;
+        position: absolute;
+        padding-top: 2rem;
+        padding-bottom: 2rem;;
         .router-outlet {
             background: $sweety-white;
-            border-left: 5px solid $sweety-primary-color;
+            // border-left: 5px solid $sweety-primary-color;
             margin-left: 1px;
             border-top-left-radius: 6px;
             border-bottom-left-radius: 6px;
