ck editor added

--- a/src/app/modules/home/components/save-gold-scheme/sgs-edit-forms/sgs-edit-forms.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-edit-forms/sgs-edit-forms.component.html
@@ -133,7 +133,10 @@
             <mat-form-field>
                 <mat-label>Group Commission</mat-label>
                 <input matInput appOnlyNumbers formControlName="group_commission" placeholder="Group Commission %" />
-            </mat-form-field>            
+            </mat-form-field> 
+            <!-- <div>
+                <ckeditor [editor]="Editor" [data]="editorData"></ckeditor>
+            </div>            -->
             <div fxLayout="row">
                 <button
                     class="mat-raised-button mat-primary"
