--- a/src/app/modules/dashboard/components/completed-overview/completed-overview.component.html
+++ b/src/app/modules/dashboard/components/completed-overview/completed-overview.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!isStpUser">
+<ng-container>
     <app-my-completed-requests
         *appHasAccessToRole="[ROLE_NAME.USER, ROLE_NAME.ROLE_USER_MAKER_CHECKER]"
     ></app-my-completed-requests>
