--- a/src/app/modules/dashboard/components/pending-requests/pending-requests.component.html
+++ b/src/app/modules/dashboard/components/pending-requests/pending-requests.component.html
@@ -1,5 +1,5 @@
 <div class="pending-requests">
-    <ng-container *ngIf="!isStpUser">
+    <ng-container>
         <app-master-container
             *appHasAccessToRole="[ROLE_NAME.USER, ROLE_NAME.ROLE_USER_MAKER_CHECKER]"
             #approved
