--- a/src/assets/theme-save-gold-scheme/_colors.scss
+++ b/src/assets/theme-save-gold-scheme/_colors.scss
@@ -13,7 +13,7 @@ $sweety-success-border: #a0b980;
 $sweety-color-grey: #777777;
 $sweety-color-orange: #ffa500;
 $sweety-text-color: #555555;
-$sweety-tab-active-border: #00a1de;
+$sweety-tab-active-border: #0075b0;
 $sweety-light-grey: #222222;
 $sweety-text-white: #fafafa;
 $sweety-divider-color: #f6f6f6;
