--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -13,7 +13,10 @@
     <div [fxFlex]="showSideMenu?'80':'100'">
       <div fxLayout="column" fxFlex="100" >
           <app-header (logoutAction)="logout()" (menuAction)="handleMenu($event)"></app-header>
-          <router-outlet></router-outlet>
+          <app-outlet-container>
+            <router-outlet></router-outlet>
+          </app-outlet-container>
+          
       </div>
     </div>
   </div>
